--- a/src/index.html
+++ b/src/index.html
@@ -8,5 +8,29 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body class="text-body font-kumbh-sans">
+    <main>
+      <div class="card">
+        <img src="images/image-victor.jpg" alt="" class="card__img">
+
+        <h1 class="card__title">Victor Crest <span>26</span></h1>
+
+        <h2 class="card__subtitle">London</h2>
+
+        <div class="stats">
+          <div class="stat">
+            <h3 class="stat__number">80k</h3>
+            <p class="stat_copy">Followers</p>
+          </div>
+          <div class="stat">
+            <h3 class="stat__number">803k</h3>
+            <p class="stat_copy">Likes</p>
+          </div>
+          <div class="stat">
+            <h3 class="stat__number">1.4k</h3>
+            <p class="stat_copy">Photos</p>
+          </div>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
