--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,12 @@
     <link rel="icon" type="image/svg+xml" href="images/favicon-32x32.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Profile Card Component</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body class="text-body font-kumbh-sans">
-    <main>
+    <main class="min-h-screen grid place-items-center px-6">
       <div class="card">
-        <img src="images/image-victor.jpg" alt="" class="card__img">
+        <img class="card__img" src="images/image-victor.jpg" alt="profile picture" />
 
         <h1 class="card__title">Victor Crest <span>26</span></h1>
 
@@ -19,15 +19,15 @@
         <div class="stats">
           <div class="stat">
             <h3 class="stat__number">80k</h3>
-            <p class="stat_copy">Followers</p>
+            <p class="stat__copy">Followers</p>
           </div>
           <div class="stat">
             <h3 class="stat__number">803k</h3>
-            <p class="stat_copy">Likes</p>
+            <p class="stat__copy">Likes</p>
           </div>
           <div class="stat">
             <h3 class="stat__number">1.4k</h3>
-            <p class="stat_copy">Photos</p>
+            <p class="stat__copy">Photos</p>
           </div>
         </div>
       </div>
